--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- Assurez-vous que le script fait référence à la version construite -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
